force-app/main/default/objects/CARE_CC_Email_Batch_Detail__c/CARE_CC_Email_Batch_Detail__c.object-meta.xml
<CustomObject>
    <description>CARE CC Email batch detail for email address and sent status</description>
    <label>CARE CC Email Batch Detail</label>
    <nameField>
        <displayFormat>CCED{0000000000}</displayFormat>
        <label>Email Detail Seq No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE CC Email Batch Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>