force-app/main/default/objects/CARE_CC_Email_Batch_Detail__c/fields/ACCOUNT__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACCOUNT</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CARE CC Email Batch Detail</relationshipLabel>
    <relationshipName>CARE_CC_Email_Batch_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>