force-app/main/default/objects/CARE_CC_Email_Batch_Detail__c/fields/DETAIL_STATUS__c.field-meta.xml
<CustomField>
    <fullName>DETAIL_STATUS__c</fullName>
    <label>DETAIL STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>