force-app/main/default/objects/CARE_CC_Email_Batch_Detail__c/fields/EMAIL_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ADDRESS__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>EMAIL ADDRESS</label>
    <length>254</length>
    <required>true</required>
    <type>Text</type>
</CustomField>