force-app/main/default/objects/CARE_CC_Email_Batch_Detail__c/fields/EMAIL_BATCH__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_BATCH__c</fullName>
    <label>EMAIL BATCH</label>
    <referenceTo>CARE_CC_Email_Batch__c</referenceTo>
    <relationshipLabel>CARE CC Email Batch Detail</relationshipLabel>
    <relationshipName>CARE_CC_Email_Batch_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>