force-app/main/default/objects/CARE_CC_Email_Batch_Detail__c/fields/FIRST_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>FIRST_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FIRST SENT DATE</label>
    <type>DateTime</type>
</CustomField>