force-app/main/default/objects/CARE_CC_Email_Batch_Detail__c/fields/LAST_SENT_DATE__c.field-meta.xml
<CustomField>
    <fullName>LAST_SENT_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LAST SENT DATE</label>
    <type>DateTime</type>
</CustomField>